// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component should render a Card without elevation 1`] = `
<View
  elevation={false}
  radius={false}
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 0,
        "elevation": 0,
      },
    ]
  }
  testID="elevationID"
  type="base"
>
  <Text>
    Card
  </Text>
</View>
`;

exports[`Card component should render a Card without rounded corners 1`] = `
<View
  elevation={false}
  radius={false}
  style={
    Array [
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 0,
        "elevation": 0,
      },
    ]
  }
  testID="radiusID"
  type="base"
>
  <Text>
    Card
  </Text>
</View>
`;
